--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,6 @@
     <string name="password">Password</string>
     <string name="username">Username</string>
     <string name="register">REGISTER</string>
+    <string name="time_out">Time Out...</string>
+    <string name="try_again">Try Again</string>
 </resources>
